--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -24,12 +24,14 @@ global CSS variables
 	/* layout */
 	/*--content-width: 60ch; /* is not same for different fonts */
 	--content-width: 30rem;
+	/*--content-width: 100%;*/
 	--sidenote-width: 16rem;
-	--header-height: 3rem;
-	--gutter-width: 1.5rem;
-	--gutter-height: 3.9rem; /* 2.8rem */
-	--scrollbar-width: 2vw;
+
 	--line-height: 1.4rem;
+	--header-height: calc(3*var(--line-height));
+	--gutter-width: 1.4rem;
+	--gutter-height: calc(1*var(--line-height));
+	--scrollbar-width: 2vw;
 
 	/*
 		- themes to be compatble with https://github.com/hundredrabbits/Themes
@@ -489,7 +491,10 @@ abbr {
 	text-decoration: none;
 	text-transform: lowercase;
 }
-/*	abbr:after {
+
+	/* the following has been incorporated in the tooltips section
+	/*	
+	abbr:after {
 		line-height: 1.3;
 
 		font-variant: initial;
@@ -592,18 +597,62 @@ helper / common classes
 }
 
 
+
+/*--------------------------------------------------------------
+form styles
+--------------------------------------------------------------*/
+
+.button {	
+	display: block;
+	margin: 0.5rem auto;
+	padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+
+	background: rgb(var(--page-color));
+	border: 1.5px solid rgb(var(--text-color));
+	border-bottom: 3px solid;
+	border-radius: 2rem;
+	color: rgb(var(--text-color));
+	/*letter-spacing: 1px;*/
+	line-height: 0.5;	
+	font-weight: bold;
+	text-transform: uppercase;
+
+	cursor: pointer;
+	pointer-events: auto;
+
+	box-shadow: 0px 5px 0px 0px var(--shadow-color);
+
+	-webkit-appearance: button; /* iOS and Safari fix */
+}
+
+.button:hover {
+	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
+	transform: translate(0, 1px);
+}
+
+.button:focus {
+	border-top: 3px solid;
+	border-bottom: 1.5px solid;
+	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
+	outline: none;
+}
+
+.button::-moz-focus-inner { border: 0; }
+
+
 /*--------------------------------------------------------------
 table styles
 --------------------------------------------------------------*/
 
 table {
-	margin: var(--gutter-height) 0.7rem;
-	width: calc(100% - 2*0.7rem);
+	margin: var(--gutter-height) auto;
+	width: 100%;
+	/*table-layout: fixed;*/
+	overflow-x: scroll;
 	
 	border-top:    1.5px solid rgb(var(--text-color));
 	border-bottom: 1.5px solid rgb(var(--text-color));
 	border-spacing: 0.25rem;
-	font-variant: tabular-nums;
 	text-align: left;
 }
 
@@ -629,12 +678,8 @@ th:empty {
 	display: none;
 }
 
-tr td {
-	border-bottom: 1.5px solid transparent;
-}
-
 tr:hover td {
-	border-color: rgb(var(--accent-color));
+	background: var(--shadow-color);
 }
 
 /*--------------------------------------------------------------
@@ -685,15 +730,9 @@ body > footer {
 }
 
 
-body > footer nav ul,
-.sharing ul {
+body > footer nav ul {
 	margin: 0;
 	padding: 0;
-}
-
-.sharing ul {
-	margin-top: var(--gutter-width);
-	margin-bottom: var(--gutter-width);
 }
 
 body > footer nav ul {
@@ -702,20 +741,44 @@ body > footer nav ul {
 	text-align: center;
 }
 
-body > footer nav li,
-.sharing li {
+body > footer nav li {
 	display: inline-block;
 	margin: 0 0.5rem;
 }
-	body > footer nav li:first-child,
-	.sharing li:first-child {
+	body > footer nav li:first-child {
 		margin-left: 0;
 	}
-	body > footer nav li:last-child,
-	.sharing li:last-child {
+	body > footer nav li:last-child {
 		margin-right: 0;
 	}
 
+
+
+
+/*--------------------------------------------------------------
+social sharing menu
+--------------------------------------------------------------*/
+
+.sharing {
+	margin-top: var(--gutter-width);
+	margin-bottom: var(--gutter-width);
+}
+
+.sharing summary {
+	/*display: inline-block;*/
+	display: none;
+}
+
+.sharing a {
+	display: inline-block;
+	margin: 0 0.5rem;
+}
+	.sharing a:first-of-type {
+		margin-left: 0;
+	}
+	.sharing a:last-child {
+		margin-right: 0;
+	}
 
 
 /*--------------------------------------------------------------
@@ -1041,6 +1104,7 @@ abbr[title*=' ']:hover:after,
 span[title*=' ']:hover:after {
 	content: attr(title);
 	padding-right: var(--gutter-width);
+	margin-right: 2px;
 	width: auto;
 	z-index: 100;
 
@@ -1210,47 +1274,6 @@ article filter styles
 	transform: scale(0.8);
 }
 
-/*--------------------------------------------------------------
-form styles
---------------------------------------------------------------*/
-
-.button {	
-	display: block;
-	margin: 0.5rem auto;
-	padding: 0.6rem 0.6rem 0.5rem 0.6rem;
-
-	background: rgb(var(--page-color));
-	border: 1.5px solid rgb(var(--text-color));
-	border-bottom: 3px solid;
-	border-radius: 2rem;
-	color: rgb(var(--text-color));
-	/*letter-spacing: 1px;*/
-	line-height: 0.5;	
-	font-weight: bold;
-	text-transform: uppercase;
-
-	cursor: pointer;
-	pointer-events: auto;
-
-	box-shadow: 0px 5px 0px 0px var(--shadow-color);
-
-	-webkit-appearance: button; /* iOS and Safari fix */
-}
-
-.button:hover {
-	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
-	transform: translate(0, 1px);
-}
-
-.button:focus {
-	border-top: 3px solid;
-	border-bottom: 1.5px solid;
-	box-shadow: inset 0 2rem 0 var(--shadow-color), 0px 3px 0px 0px var(--shadow-color);
-	outline: none;
-}
-
-.button::-moz-focus-inner { border: 0; }
-
 
 
 /*--------------------------------------------------------------
@@ -1260,8 +1283,13 @@ articles-list styles
 
 .articles-list {
 	position: relative;
-	margin-top: var(--gutter-width);
+	margin-top: var(--gutter-height);
+
 	/*outline: 1px dashed cyan;*/
+}
+
+.articles-list > .wrapper {
+	text-align: center;
 }
 
 .articles-list summary {
@@ -1282,24 +1310,21 @@ articles-list styles
 
 .articles-list summary h2 {
 	display: inline-block;
-	margin-bottom: var(--gutter-width);
+	margin-bottom: var(--gutter-height);
 	padding: 0 0.25rem;
 
 	cursor: pointer;
-
-/*	background: rgb(var(--text-color));
-	color: rgb(var(--text-color-inverted));*/
 }
 
 .articles-list article {
 	max-width: var(--content-width);
 	vertical-align: top;
-
+	text-align: left;
 	/*outline: 1px dashed red;*/
 }
 
 .articles-list article + article {
-	margin-top: var(--gutter-width);
+	margin-top: var(--gutter-height);
 }
 
 .articles-list article > a {
@@ -1319,6 +1344,9 @@ articles-list styles
 .articles-list article .thumbnail {
 	font-size: 0;
 	transition: transform .3s;
+	max-height: 100vh;
+	overflow: hidden;
+	/*outline: 1px dashed red;*/
 }
 
 .articles-list article .thumbnail:empty {
@@ -1345,23 +1373,34 @@ articles-list styles
 	/*outline: 1px dashed red;*/
 }
 
-.articles-list article .description {
+.articles-list article .summary {
 	display: inline;
 
 	color: rgba(var(--text-color),0.8);
 	/*outline: 1px dashed red;*/
 }
 
+.articles-list article.preformatted,
+.articles-list article.preformatted pre {
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+	width: auto;
 
+	text-align: center;
+}
+
+.articles-list article.preformatted pre {
+	text-align: left;
+}
 
 /*--------------------------------------------------------------
 articles oddities classes
 --------------------------------------------------------------*/
 
-article.draft:after {
+article.draft .summary:before {
 	content: 'DRAFT';
-	position: absolute;
-	line-height: 1;
+	margin-right: 0.5em;
 
 	border-top: 1.5px solid;
 	border-bottom: 1.5px solid;
@@ -1377,30 +1416,59 @@ article.draft:after {
 articles cross-language display
 --------------------------------------------------------------*/
 
-.articles-list:lang(en) article:lang(el),
-.articles-list:lang(el) article:lang(en) {
-	background: none;
+.articles-list:lang(en) article:lang(el) .thumbnail,
+.articles-list:lang(el) article:lang(en) .thumbnail,
+.articles-list:lang(en) article:lang(el) .title,
+.articles-list:lang(el) article:lang(en) .title,
+.articles-list:lang(en) article:lang(el) .summary,
+.articles-list:lang(el) article:lang(en) .summary,
+.articles-list:lang(en) article:lang(el) .time,
+.articles-list:lang(el) article:lang(en) .time
+{
 	opacity: 0.5;
 	filter: blur(1px);
-	transition: opacity 0.2s;
+
+	transition: opacity 0.2s, transform 1s;
 }
-	.articles-list:lang(en) article:lang(el):hover,
-	.articles-list:lang(el) article:lang(en):hover {
+	.articles-list:lang(en) article:lang(el):hover .thumbnail,
+	.articles-list:lang(el) article:lang(en):hover .thumbnail,
+	.articles-list:lang(en) article:lang(el):hover .title,
+	.articles-list:lang(el) article:lang(en):hover .title,
+	.articles-list:lang(en) article:lang(el):hover .summary,
+	.articles-list:lang(el) article:lang(en):hover .summary,
+	.articles-list:lang(en) article:lang(el):hover .time,
+	.articles-list:lang(el) article:lang(en):hover .time
+	{
 		opacity: 1 !important;
 		filter: blur(0px);
-		mix-blend-mode: normal;
-		transition: opacity 0.3s;
+
+		transition: opacity 0.3s, transform 1s;
 	}
-/*	.articles-list:lang(en) article:lang(el):before,
-	.articles-list:lang(el) article:lang(en):before {
-		left: 0;
-		content: attr(lang);
-		filter: blur(0px);
-
-		transform: translate(-100%, 0);
-	}*/
 
 
+
+
+/*--------------------------------------------------------------
+articles-list - side
+--------------------------------------------------------------*/
+
+
+.articles-list.side article a {
+	display: grid;
+	grid-template-columns: 56% 1fr;
+	grid-column-gap: var(--gutter-width);
+}
+
+.articles-list.side article .thumbnail {
+	grid-column: 1;
+	grid-row: 1 / span 34;
+}
+
+.articles-list.side article .time,
+.articles-list.side article .title,
+.articles-list.side article .summary {
+	grid-column: 2;
+}
 
 /*--------------------------------------------------------------
 articles-list - stack
@@ -1411,7 +1479,7 @@ articles-list - stack
 }
 
 .articles-list.stack article + article {
-	margin-top: calc(var(--gutter-width)/2);
+	margin-top: calc(var(--gutter-height)/2);
 }
 
 .articles-list.stack article a {
@@ -1426,16 +1494,12 @@ articles-list - stack
 	display: none;
 }
 
-
-.articles-list.stack .time {
-	order: 3;
-	width: 9ch;
-}
-
 .articles-list.stack .time {
 	display: inline-block;
 	flex-shrink: 0;
 	margin-left: 1ch;
+	order: 3;
+	width: 9ch;
 	/*outline: 1px dashed red;*/
 }
 
@@ -1444,7 +1508,7 @@ articles-list - stack
 	order: 1;
 }
 
-.articles-list.stack .description {
+.articles-list.stack .summary {
 	display: inline-block;
 	order: 2;
 	flex-grow: 1;
@@ -1453,7 +1517,6 @@ articles-list - stack
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-
 
 
 /*--------------------------------------------------------------
@@ -1477,20 +1540,6 @@ articles-list - cluster
 .articles-list.cluster article:nth-last-child(1):nth-child(odd) {
 	/*flex-grow: 0;*/
 	/*outline: 2px solid red;*/
-}
-
-.articles-list.cluster article.preformatted {
-	width: 100%;
-
-	text-align: center;
-}
-
-.articles-list.cluster article.preformatted > * {
-	display: inline-block;
-	margin-left: auto;
-	margin-right: auto;
-
-	text-align: left;
 }
 
 
@@ -1517,7 +1566,7 @@ articles-list - no-text
 
 .articles-list.no-text article .time,
 .articles-list.no-text article .title,
-.articles-list.no-text article .description {
+.articles-list.no-text article .summary {
 	display: none;
 }
 
@@ -1745,7 +1794,7 @@ aside.meta,
 	line-height: 1;
 }
 	.entry-content blockquote:lang(el)::before {
-		content: '«';
+		content: '»';
 		margin-top: -0.5em;
 	}
 
@@ -1765,8 +1814,13 @@ footnotes
 	text-decoration: none;
 }
 
+.footnote-return {
+	margin-left: 0.5em;
+}
+
+
 .footnote-ref + .footnote-ref:before {
-	content: ', ';
+	/*content: ', ';*/
 }
 
 .footnotes ol {
@@ -1811,10 +1865,14 @@ footnotes
 		font-size: 1.2rem;
 	}
 
+sup[id^="fnref:"] a {
+	padding-right: 0.3rem;s
+}
+
 sup[id^="fnref:"]:target:after {
 	content: '→';
 	position: absolute;
-	left: calc(-1*var(--gutter-width));
+	left: 0;
 	width: var(--gutter-width);
 
 	font-size: 1rem;
