--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -604,6 +604,13 @@ helper / common classes
 	display: none;
 }
 
+.callout {
+	margin: var(--gutter-height) auto;
+	color: rgb(var(--accent-color));
+	font-size: 3rem;
+	line-height: 1.3;
+}
+
 
 
 /*--------------------------------------------------------------
@@ -1149,13 +1156,13 @@ span[title*=' ']:hover:after {
 	}
 	/* PDF links icon */
 	a[title*=' '][href*='.pdf']:after {
-		--tooltip-mark: '📄';
+		--tooltip-mark: '🗎';
 	}
 	/* abbr and other notes icon */
 	abbr[title*=' ']:after,
 	span[title*=' ']:after {
-		/*--tooltip-mark: '※';*/
-		--tooltip-mark: '🞰';
+		--tooltip-mark: '※';
+		/*--tooltip-mark: '🞰';*/
 	}
 	/* ins and del tags icon and content */
 	ins[datetime]:after,
@@ -1506,7 +1513,7 @@ articles-list - side
 
 .articles-list.side article a {
 	display: grid;
-	grid-template-columns: 56% 1fr;
+	grid-template-columns: 40% 1fr;
 	grid-column-gap: var(--gutter-width);
 }
 
@@ -1515,11 +1522,31 @@ articles-list - side
 	grid-row: 1 / span 34;
 }
 
+.articles-list.side article .thumbnail img {
+	height: 100%;
+	object-fit: cover;
+}
+
 .articles-list.side article .time,
 .articles-list.side article .title,
 .articles-list.side article .summary {
 	grid-column: 2;
 }
+
+.articles-list.side.alternate article:nth-child(2n) a {
+	grid-template-columns: 60% 1fr;
+}
+
+.articles-list.side.alternate article:nth-child(2n) .thumbnail {
+	grid-column: 2;
+}
+
+.articles-list.side.alternate article:nth-child(2n) .time,
+.articles-list.side.alternate article:nth-child(2n) .title,
+.articles-list.side.alternate article:nth-child(2n) .summary {
+	grid-column: 1;
+}
+
 
 /*--------------------------------------------------------------
 articles-list - stack
@@ -1797,12 +1824,6 @@ single article meta styles
 article styles
 --------------------------------------------------------------*/
 
-aside.meta,
-.entry-content .sidenote {
-	border: 3px double;
-	margin: var(--gutter-width) 0;
-	padding: calc(var(--gutter-width)/2);
-}
 
 .entry-content ul li:before {
 	content: '-';
@@ -1853,6 +1874,57 @@ aside.meta,
 	text-align: right;
 }
 
+
+/*--------------------------------------------------------------
+sidenote styles
+--------------------------------------------------------------*/
+
+aside.meta,
+.sidenote,
+.entry-content aside {
+	position: relative;
+	margin: var(--gutter-height) 0;
+	padding: calc(var(--gutter-width)/2);
+
+	border: 3px double;
+}
+
+/*.sidenote::before,
+.entry-content aside::before {
+	content: '⊕';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: calc(-1*var(--gutter-width));
+	width: var(--gutter-width);
+
+	color: rgba(var(--text-color),1);
+	cursor: e-resize;
+	line-height: 1.2rem;
+	pointer-events: initial;
+	text-align: center;
+
+	-webkit-transition: all .3s 1.5s;
+	transition        : all .3s 1.5s;
+}
+
+.sidenote,
+.entry-content aside {
+	max-height: 3rem;
+	overflow: hidden;
+
+	-webkit-mask-image: -webkit-linear-gradient(top, rgba(0,0,0,1) 0, rgba(0,0,0,0) 90%);
+}
+
+.sidenote:hover,
+.entry-content aside:hover {
+	max-height: 100vh;
+	-webkit-mask-image: none;
+}
+
+@media only screen and ( min-width: 1200px ) {
+	
+}*/
 
 /*--------------------------------------------------------------
 footnotes
@@ -2059,7 +2131,7 @@ gallery
 .gallery .top img {
 	/*border: 1.5px solid rgba(0,0,0,1);*/
 	box-shadow: 0 4px 8px 4px rgba(0,0,0,0.5);
-	cursor: all-scroll;
+	cursor: e-resize;
 
 	transform: scale(1.2);
 	transition-delay: 0s;
