--- a/layouts/partials/footer/inner.html
+++ b/layouts/partials/footer/inner.html
@@ -1,4 +1,4 @@
-{{ if eq .Site.Params.Menu_social true }}{{ partial "social.html" . }}{{ end }}
+{{ if ne .Site.Params.Menu_social false }}{{ partial "social.html" . }}{{ end }}
 
 {{ with .Site.Copyright -}}
 	<div class="copyright">{{ . | safeHTML  }}</div>
